Add getting JSON chart data from Poloniex API

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
  - "3.6"
 install:
- - pip install delorean
+ - pip install delorean requests
 script:
  - python -m unittest discover
