--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
  - "3.6"
 install:
- - pip install delorean requests
+ - pip install delorean requests scikit-learn pandas
 script:
  - python -m unittest discover
