--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: python
 python:
  - "3.6"
 install:
- - pip3 install delorean requests numpy scikit-learn pandas
+ - pip3 install delorean requests numpy scikit-learn tensorflow pandas
 script:
  - python -m unittest discover
